[package]
name = "auth_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# argonautica = "0.2.0"
# actix-web = "2"
# actix-rt = "1"
# tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dependencies]
actix-web = "2"
actix-rt = "1"
serde = { version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = "0.5.0"
tokio-postgres = "0.5.1"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
sha2 = "0.10.6"
validator = "0.10"
validator_derive = "0.10"
